Fixed issue found on phone with join/resources buttons. Button would overlapp because of too much padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@
 .programs-list .program-links a {
   border-radius: 30px;
   font-size: 18px;
-  padding: 15px 30px;
+  padding: 15px 15px;
   background: #662d91;
   color: rgb(255, 255, 255);
   border-radius: 10px;
